add logo pointer

--- a/css/main.css
+++ b/css/main.css
@@ -216,6 +216,10 @@
   transition: 0.5s;
 }
 
+.header-logo {
+  cursor: pointer;
+}
+
 @media (max-width: 991px) {
   .header {
     margin-bottom: 50px;
