--- a/css/main.css
+++ b/css/main.css
@@ -387,7 +387,8 @@
           align-items: flex-start;
 }
 
-.services__item {
+.services__item-link {
+  text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -414,18 +415,12 @@
           justify-content: center;
   width: 275px;
   font-family: "Abel", sans-serif;
-}
-
-.services__item-title {
-  color: #000000;
-}
-
-.services__item-link {
-  text-decoration: none;
+  color: #b2b2b2;
 }
 
 .services__item-img {
   width: 150px;
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -436,6 +431,10 @@
 
 .services__item-description {
   color: #b2b2b2;
+}
+
+.services__item-title {
+  color: #000000;
 }
 
 @media (max-width: 1024px) {
